<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StonePaperscissor</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="save">Save</string>
    <string name="name">Enter Your Name</string>
    <string name="default_name">Player1</string>
    <string name="single">Single Player</string>
    <string name="double1">Double Player</string>
    <string name="title_activity_game">Game</string>
    <string name="stone">Stone</string>
    <string name="paper">Paper</string>
    <string name="scissor">Scissor</string>

</resources>